Shorten prices, make phrasing consistent
- Details have been removed from prices as they became too long
- Change all yearly prices to "$price/user annually" (as opposed to $price/user/year and other variations)
- For tools with multiple tiers or options, replace with "$price+" with the price of the cheapest tier - this is because having two "$price/user annually" in one line was already too much, and also some tools have weird tier systems that are too complex to summarise better than that

Also added some comments that we might use later

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -44,7 +44,8 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: Free for local and public repos / $59+/user annually (free 7-day trial)
+  # Free tier only works with local and public repositories
+  price: Free / $59+/user annually
   license: Proprietary
   order: 5
 - name: Magit
@@ -73,7 +74,8 @@ guis:
   platforms:
   - Windows
   - Mac
-  price: "Free for students and educators / $69/user annually / $99/user annually (Free 30 day trial)"
+  # Free for students and educators
+  price: "$69+/user annually (Free 30-day trial)"
   license: Proprietary
   trend_name: git tower
   order: 8
@@ -139,7 +141,8 @@ guis:
   platforms:
   - Windows
   - Mac
-  price: $49.99, free evaluation
+  # No details on the evaluation limits or terms
+  price: $49.99 (Free evaluation)
   license: Proprietary
   trend_name: Fork Git client
   order: 12
@@ -148,7 +151,9 @@ guis:
   image_tag: guis/workingcopy@2x.png
   platforms:
     - iOS
-  price: Free with in-app purchases
+  # The $19.99 price is for one year of feature updates, new paid features added more
+  # than a year after purchase will be locked out (but updates and patches continue)
+  price: Free / $19.99
   license: Proprietary
   trend_name: Working Copy iOS
   order: 22
@@ -177,7 +182,7 @@ guis:
   image_tag: guis/pocketgit@2x.png
   platforms:
     - Android
-  price: €2.49 / $1.99
+  price: €2.49/$1.99
   license: Proprietary
   order: 21
 - name: GitDrive
@@ -185,7 +190,8 @@ guis:
   image_tag: guis/gitdrive@2x.png
   platforms:
     - iOS
-  price: Free with in-app purchases
+  # No details what the $6.99 in-app purchase does, all it says is "Unlimited Version"
+  price: Free / $6.99
   license: Proprietary
   order: 37
 - name: Guitar
@@ -224,7 +230,9 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: "$99/user, $75 annual business sub, free eval"
+  # Evaluation has no time limit, but will nag the user to buy a license
+  # License is only valid for 3 years of updates
+  price: "$99/user / $75/user annually (Free evaluation)"
   license: Proprietary
   order: 10
 - name: LazyGit
@@ -242,7 +250,8 @@ guis:
   image_tag: guis/snailgit@2x.png
   platforms:
   - Mac
-  price: "$9.99 / Lite version"
+  # Lite version is limited to just one repository
+  price: "Free (limited) / $9.99"
   license: Proprietary
   order: 32
 - name: GitAtomic
@@ -250,7 +259,7 @@ guis:
   image_tag: guis/gitatomic@2x.png
   platforms:
   - Windows
-  price: 15.00€/year
+  price: $17.99+/user annually (Free 30-day trial)
   license: Proprietary
   order: 39
 - name: Gitfox
@@ -258,7 +267,7 @@ guis:
   image_tag: guis/gitfox@2x.png
   platforms:
   - Mac
-  price: "€39,99/year or €79,99 once"
+  price: "€39,99/user annually / €79,99 (Free 30-day trial)"
   license: Proprietary
   trend_name: Gitfox Git Client
   order: 23
@@ -277,7 +286,7 @@ guis:
   image_tag: guis/nitrogit@2x.png
   platforms:
   - Windows
-  price: "20€/user / Free for non-commercial use"
+  price: "Free for non-commercial use / 20€/user"
   license: Proprietary
   order: 40
 - name: GitFinder
@@ -285,7 +294,8 @@ guis:
   image_tag: guis/gitfinder@2x.png
   platforms:
   - Mac
-  price: "$29.95"
+  # After the trial ends, GitFinder will only work with one git repository
+  price: "Free (limited) / $29.95 (Free 30-day trial)"
   license: Proprietary
   order: 41
 - name: Vershd
@@ -295,7 +305,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: Free for personal use, otherwise $37/year/user
+  price: Free for non-commercial use / $37/user annually
   license: Proprietary
   order: 42
 - name: GitUI
@@ -313,7 +323,9 @@ guis:
   image_tag: guis/polygit@2x.png
   platforms:
   - iOS
-  price: Free (3 pushes per day) / $15/year (unlimited pushes + extra features)
+  # Free tier only allows 3 pushes per day
+  # Price on the website ($15) doesn't match prices in the app store (below)
+  price: Free (limited) / $11.99/year / $39.99
   license: Proprietary
   order: 44
 - name: GitVine
@@ -373,6 +385,7 @@ guis:
   platforms:
     - Mac
     - iOS
-  price: Free with in-app purchases
+  # No details on the limitations with the free version
+  price: Free / $6.99 (Free 7-day trial)
   license: Proprietary
   order: 48
